
project(examples CXX)
cmake_minimum_required(VERSION 3.3)

if (NOT ACE_ROOT)
  find_package(ACE REQUIRED CONFIG)
endif()
add_subdirectory(Smart_Pointers)
add_subdirectory(Monitor)
add_subdirectory(Threads)
add_subdirectory(C++NPv1)
add_subdirectory(OS)
add_subdirectory(ASX)
add_subdirectory(QOS)
add_subdirectory(NT_Service)
add_subdirectory(Log_Msg)
add_subdirectory(IOStream)
add_subdirectory(Synch)
add_subdirectory(Timer_Queue)
add_subdirectory(Registry)
add_subdirectory(Map_Manager)
add_subdirectory(Semaphores)
add_subdirectory(Naming)
add_subdirectory(Web_Crawler)
add_subdirectory(Misc)
add_subdirectory(System_V_IPC)
add_subdirectory(Export)
add_subdirectory(Service_Configurator)
add_subdirectory(Logger)
add_subdirectory(C++NPv2)
add_subdirectory(Shared_Malloc)
add_subdirectory(APG)
add_subdirectory(Bounded_Packet_Relay)
add_subdirectory(Reactor)
add_subdirectory(DLL)
add_subdirectory(Connection)
add_subdirectory(IPC_SAP)
add_subdirectory(Shared_Memory)
add_subdirectory(Mem_Map)
