
project(examples CXX)
cmake_minimum_required(VERSION 3.3)

if (NOT TARGET ACE)
  find_package(ACE REQUIRED CONFIG)
endif()
add_subdirectory(Bounded_Packet_Relay)
add_subdirectory(C++NPv1)
add_subdirectory(C++NPv2)
add_subdirectory(DLL)
add_subdirectory(Export)
add_subdirectory(Log_Msg)
add_subdirectory(Map_Manager)
add_subdirectory(Misc)
add_subdirectory(Monitor)
add_subdirectory(Naming)
add_subdirectory(NT_Service)
add_subdirectory(Registry)
add_subdirectory(Semaphores)
add_subdirectory(Shared_Malloc)
add_subdirectory(Shared_Memory)
add_subdirectory(Smart_Pointers)
add_subdirectory(Synch)
add_subdirectory(Threads)
add_subdirectory(Timer_Queue)
add_subdirectory(Web_Crawler)
add_subdirectory(APG)
add_subdirectory(ASX)
add_subdirectory(Connection)
add_subdirectory(IOStream)
add_subdirectory(IPC_SAP)
add_subdirectory(Logger)
add_subdirectory(Mem_Map)
add_subdirectory(OS)
add_subdirectory(QOS)
add_subdirectory(Reactor)
add_subdirectory(Service_Configurator)
add_subdirectory(System_V_IPC)
